--- a/main.ipynb
+++ b/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 156,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 157,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 158,
    "metadata": {},
    "outputs": [
     {
@@ -47,9 +47,9 @@
      "text": [
       "          images    image_size\n",
       "X_train   60000     28x28\n",
-      "y_train   60000     N/A (Label)\n",
+      "y_train   60000     \n",
       "X_test    10000     28x28\n",
-      "y_test    10000     N/A (Label)\n"
+      "y_test    10000     \n"
      ]
     }
    ],
@@ -58,16 +58,16 @@
     "def dataset_shape():\n",
     "    print(\"\".ljust(9, \" \"), \"images\".ljust(9), \"image_size\")\n",
     "    print(\"X_train\".ljust(9, \" \"), str(X_train.shape[0]).ljust(9, \" \"), \"x\".join([str(_) for _ in X_train.shape[1:]]))\n",
-    "    print(\"y_train\".ljust(9, \" \"), str(y_train.shape[0]).ljust(9, \" \"), \"N/A (Label)\")\n",
+    "    print(\"y_train\".ljust(9, \" \"), str(y_train.shape[0]).ljust(9, \" \"), \"x\".join([str(_) for _ in y_train.shape[1:]]))\n",
     "    print(\"X_test\".ljust(9, \" \"), str(X_test.shape[0]).ljust(9, \" \"), \"x\".join([str(_) for _ in X_test.shape[1:]]))\n",
-    "    print(\"y_test\".ljust(9, \" \"), str(y_test.shape[0]).ljust(9, \" \"), \"N/A (Label)\")\n",
+    "    print(\"y_test\".ljust(9, \" \"), str(y_test.shape[0]).ljust(9, \" \"), \"x\".join([str(_) for _ in y_test.shape[1:]]))\n",
     "    \n",
     "dataset_shape()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 159,
    "metadata": {},
    "outputs": [
     {
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 160,
    "metadata": {},
    "outputs": [
     {
@@ -120,10 +120,6 @@
    ],
    "source": [
     "# Normalize the input data color values from [0, 255] to [0.0, 1.0]\n",
-    "\n",
-    "# X_train = X_train.astype(np.float32) / 255\n",
-    "# X_test = X_test.astype(np.float32) / 255 \n",
-    "\n",
     "X_train = keras.utils.normalize(X_train, axis=1)\n",
     "X_test = keras.utils.normalize(X_test, axis=1)\n",
     "\n",
@@ -132,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 161,
    "metadata": {},
    "outputs": [
     {
@@ -141,9 +137,9 @@
      "text": [
       "          images    image_size\n",
       "X_train   60000     28x28x1\n",
-      "y_train   60000     N/A (Label)\n",
+      "y_train   60000     \n",
       "X_test    10000     28x28x1\n",
-      "y_test    10000     N/A (Label)\n"
+      "y_test    10000     \n"
      ]
     }
    ],
@@ -157,13 +153,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 162,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "          images    image_size\n",
+      "X_train   60000     28x28x1\n",
+      "y_train   60000     10\n",
+      "X_test    10000     28x28x1\n",
+      "y_test    10000     10\n"
+     ]
+    }
+   ],
    "source": [
     "# Convert label classes to one hot vectors\n",
     "y_train = keras.utils.to_categorical(y_train)\n",
-    "y_test = keras.utils.to_categorical(y_test)"
+    "y_test = keras.utils.to_categorical(y_test)\n",
+    "\n",
+    "dataset_shape()"
    ]
   },
   {
@@ -175,32 +185,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 163,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Model: \"sequential_6\"\n",
+      "Model: \"sequential_8\"\n",
       "_________________________________________________________________\n",
       " Layer (type)                Output Shape              Param #   \n",
       "=================================================================\n",
-      " conv2d_5 (Conv2D)           (None, 26, 26, 32)        320       \n",
+      " conv2d_9 (Conv2D)           (None, 26, 26, 32)        320       \n",
       "                                                                 \n",
-      " max_pooling2d_4 (MaxPooling  (None, 13, 13, 32)       0         \n",
+      " max_pooling2d_8 (MaxPooling  (None, 13, 13, 32)       0         \n",
       " 2D)                                                             \n",
       "                                                                 \n",
-      " conv2d_6 (Conv2D)           (None, 11, 11, 64)        18496     \n",
+      " conv2d_10 (Conv2D)          (None, 11, 11, 64)        18496     \n",
       "                                                                 \n",
-      " max_pooling2d_5 (MaxPooling  (None, 5, 5, 64)         0         \n",
+      " max_pooling2d_9 (MaxPooling  (None, 5, 5, 64)         0         \n",
       " 2D)                                                             \n",
       "                                                                 \n",
-      " flatten_5 (Flatten)         (None, 1600)              0         \n",
+      " flatten_7 (Flatten)         (None, 1600)              0         \n",
       "                                                                 \n",
-      " dropout_2 (Dropout)         (None, 1600)              0         \n",
+      " dropout_4 (Dropout)         (None, 1600)              0         \n",
       "                                                                 \n",
-      " dense_11 (Dense)            (None, 10)                16010     \n",
+      " dense_13 (Dense)            (None, 10)                16010     \n",
       "                                                                 \n",
       "=================================================================\n",
       "Total params: 34,826\n",
@@ -228,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 164,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -254,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 165,
    "metadata": {},
    "outputs": [
     {
@@ -262,44 +272,46 @@
      "output_type": "stream",
      "text": [
       "Epoch 1/5\n",
-      "1313/1313 [==============================] - ETA: 0s - loss: 0.0342 - accuracy: 0.9888WARNING:tensorflow:Early stopping conditioned on metric `val_acc` which is not available. Available metrics are: loss,accuracy,val_loss,val_accuracy\n",
+      "1308/1313 [============================>.] - ETA: 0s - loss: 0.2771 - accuracy: 0.9185WARNING:tensorflow:Early stopping conditioned on metric `val_acc` which is not available. Available metrics are: loss,accuracy,val_loss,val_accuracy\n",
       "WARNING:tensorflow:Can save best model only with val_acc available, skipping.\n",
-      "1313/1313 [==============================] - 16s 12ms/step - loss: 0.0342 - accuracy: 0.9888 - val_loss: 0.0428 - val_accuracy: 0.9871\n",
+      "1313/1313 [==============================] - 16s 12ms/step - loss: 0.2768 - accuracy: 0.9187 - val_loss: 0.1060 - val_accuracy: 0.9687\n",
       "Epoch 2/5\n",
-      "1309/1313 [============================>.] - ETA: 0s - loss: 0.0281 - accuracy: 0.9908WARNING:tensorflow:Early stopping conditioned on metric `val_acc` which is not available. Available metrics are: loss,accuracy,val_loss,val_accuracy\n",
+      "1308/1313 [============================>.] - ETA: 0s - loss: 0.0948 - accuracy: 0.9706WARNING:tensorflow:Early stopping conditioned on metric `val_acc` which is not available. Available metrics are: loss,accuracy,val_loss,val_accuracy\n",
       "WARNING:tensorflow:Can save best model only with val_acc available, skipping.\n",
-      "1313/1313 [==============================] - 17s 13ms/step - loss: 0.0281 - accuracy: 0.9908 - val_loss: 0.0426 - val_accuracy: 0.9876\n",
+      "1313/1313 [==============================] - 16s 12ms/step - loss: 0.0950 - accuracy: 0.9706 - val_loss: 0.0736 - val_accuracy: 0.9778\n",
       "Epoch 3/5\n",
-      "1311/1313 [============================>.] - ETA: 0s - loss: 0.0260 - accuracy: 0.9911WARNING:tensorflow:Early stopping conditioned on metric `val_acc` which is not available. Available metrics are: loss,accuracy,val_loss,val_accuracy\n",
+      "1310/1313 [============================>.] - ETA: 0s - loss: 0.0696 - accuracy: 0.9787WARNING:tensorflow:Early stopping conditioned on metric `val_acc` which is not available. Available metrics are: loss,accuracy,val_loss,val_accuracy\n",
       "WARNING:tensorflow:Can save best model only with val_acc available, skipping.\n",
-      "1313/1313 [==============================] - 16s 12ms/step - loss: 0.0262 - accuracy: 0.9910 - val_loss: 0.0532 - val_accuracy: 0.9853\n",
+      "1313/1313 [==============================] - 16s 12ms/step - loss: 0.0696 - accuracy: 0.9787 - val_loss: 0.0602 - val_accuracy: 0.9824\n",
       "Epoch 4/5\n",
-      "1313/1313 [==============================] - ETA: 0s - loss: 0.0245 - accuracy: 0.9918WARNING:tensorflow:Early stopping conditioned on metric `val_acc` which is not available. Available metrics are: loss,accuracy,val_loss,val_accuracy\n",
+      "1312/1313 [============================>.] - ETA: 0s - loss: 0.0574 - accuracy: 0.9822WARNING:tensorflow:Early stopping conditioned on metric `val_acc` which is not available. Available metrics are: loss,accuracy,val_loss,val_accuracy\n",
       "WARNING:tensorflow:Can save best model only with val_acc available, skipping.\n",
-      "1313/1313 [==============================] - 17s 13ms/step - loss: 0.0245 - accuracy: 0.9918 - val_loss: 0.0445 - val_accuracy: 0.9873\n",
+      "1313/1313 [==============================] - 16s 12ms/step - loss: 0.0574 - accuracy: 0.9822 - val_loss: 0.0549 - val_accuracy: 0.9827\n",
       "Epoch 5/5\n",
-      "1310/1313 [============================>.] - ETA: 0s - loss: 0.0219 - accuracy: 0.9925WARNING:tensorflow:Early stopping conditioned on metric `val_acc` which is not available. Available metrics are: loss,accuracy,val_loss,val_accuracy\n",
+      "1312/1313 [============================>.] - ETA: 0s - loss: 0.0481 - accuracy: 0.9847WARNING:tensorflow:Early stopping conditioned on metric `val_acc` which is not available. Available metrics are: loss,accuracy,val_loss,val_accuracy\n",
       "WARNING:tensorflow:Can save best model only with val_acc available, skipping.\n",
-      "1313/1313 [==============================] - 16s 12ms/step - loss: 0.0219 - accuracy: 0.9925 - val_loss: 0.0402 - val_accuracy: 0.9895\n"
+      "1313/1313 [==============================] - 16s 12ms/step - loss: 0.0481 - accuracy: 0.9847 - val_loss: 0.0531 - val_accuracy: 0.9836\n"
      ]
     }
    ],
    "source": [
+    "# Train model\n",
     "history = model.fit(X_train, y_train, epochs=5, validation_split=0.3, callbacks=cb)\n",
+    "# Save model\n",
     "history.model.save(\"./bestmodel.h5\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 166,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "313/313 [==============================] - 1s 4ms/step - loss: 0.0341 - accuracy: 0.9901\n",
-      "The model accuracy is 0.9901000261306763\n"
+      "313/313 [==============================] - 1s 4ms/step - loss: 0.0458 - accuracy: 0.9860\n",
+      "The model accuracy is 0.9860000014305115\n"
      ]
     }
    ],
